Make default button blue

BUG: 364226